# orange3-web-backend

./: AGENTS.md  README.md  orange3-web-backend.properties  orange3-web-backend.properties.example  orange3-web.properties.example  orange_web.db-shm  orange_web.db-wal  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.py  setup_orange.sh  test_pickle.py
app/: __init__.py  database.py  db_models.py  locks.py  main.py  mdns.py  models.py  orange_adapter.py  routes.py  tasks.py  tenant.py  websocket_manager.py  widget_discovery.py  workflow_manager.py
app/adapters/: __init__.py  orange_adapter.py  widget_discovery.py
app/api/: data.py  data_helpers.py  data_router.py  health.py
app/auth_routes/: __init__.py
app/core/: __init__.py  auth.py  auth_deps.py  auth_schemas.py  concurrency.py  config.py  data_utils.py  database.py  db_models.py  file_storage.py  globals.py  lifespan.py  locks.py  mock_data.py  models.py  orange_compat.py  orange_models.py  orange_utils.py  paths.py  rate_limit.py  registry_adapter.py  scheme_adapter.py  ssrf.py  task_api.py  task_queue.py  telemetry.py  (+3 more)
datasets_cache/: datasets_list_cache.json
tests/: __init__.py  conftest.py  test_all_widgets.py  test_api_data.py  test_api_datasets.py  test_api_health.py  test_api_heatmap.py  test_api_widgets.py  test_auth.py  test_bar_plot.py  test_box_plot.py  test_compression.py  test_core_imports.py  test_data_sampler.py  test_data_utils.py  test_datasets_widget.py  test_distributions.py  test_feature_statistics.py  test_file_upload.py  test_group_by.py  test_knn.py  test_logistic_regression.py  test_mock_stub_fixes.py  test_naive_bayes.py  test_neural_network.py  test_pca.py  test_predictions.py  test_random_forest.py  test_scatter_plot.py  test_select_columns.py  test_select_rows.py  test_svm.py  test_task_api.py  test_task_queue.py  test_test_and_score.py  test_text_mining.py  test_tree.py  test_word_cloud.py
uploads/: 509784f831d84e5dbbc232dbc1122ba2_test_data.tab  673f86bea6bb41e6b32a017196f58510_large_data.csv  c8d1cee95539471bb007c5b1714bbedd_test_data.csv
(+59 files in other folders)
